--- a/articles/12d5d0449f2da8.md
+++ b/articles/12d5d0449f2da8.md
@@ -4,13 +4,13 @@ emoji: 👀
 type: tech
 topics: ['UE5']
 published: true
-published_at: 2024-4-12
+published_at: 2024-10-3
 ---
-![thumbnail](/images/articles/43f72f3e14f19f/image1.png)\n\n
+![thumbnail](/images/articles/12d5d0449f2da8/image1.png)
 
 ## 結論
 エディタ設定の中にありました。
-![検索すると出てくる](/images/articles/43f72f3e14f19f/image1.png)
+![検索すると出てくる](/images/articles/12d5d0449f2da8/image1.png)
 
 UE5.2からエディタ設定で有効化すれば、すべてのアニメーションに対してCompatible Skeletonsが有効化できるようになったようです。
 
